Spick/Spick/LB2 Daniel Boulter alle YML Files/counter-backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-backend
  labels:
    app: counter-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/dani14077/counter-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
