Spick/Spick/LB2 Daniel Boulter alle YML Files/counter-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
  labels:
    app: counter-backend
spec: 
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: counter-backend
