Spick/Spick/LB2 Daniel Boulter alle YML Files/counter-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-database
  labels:
    app: counter-database
spec: 
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: counter-database
