Spick/Spick/LB2 Daniel Boulter alle YML Files/counter-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
spec: 
  type: NodePort
  ports:
    - name: 3000-tcp
      protocol: TCP
      targetPort: 3000
      port: 3000
  selector:
    app: counter-frontend
