Spick/Spick/LB2 Daniel Boulter alle YML Files/counter-backend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-backend
  name: counter-backend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: counter-backend
